<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.library.MylibraryActivity">

    <!--    Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/TODO"
            app:layout_constraintBottom_toBottomOf="@+id/main_header"
            app:layout_constraintEnd_toEndOf="@+id/main_header"
            app:layout_constraintStart_toStartOf="@+id/main_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/border_logo" />

    </LinearLayout>

    <!--    Body -->
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/sentence1"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_activate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/sentence2"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_deactivate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence3"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_activate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence4"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_4"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_activate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence5"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_5"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_deactivate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout6"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence6"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_6"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_deactivate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout7"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.6">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence7"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_7"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_activate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout8"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.7">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence8"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_8"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_deactivate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout9"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.8">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <TextView
                android:id="@+id/sentence9"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_9"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_deactivate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout10"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.9">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/sentence10"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/example_10"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_add_activate" />
    </LinearLayout>


    <!--    Footer -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_home" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>